Issue #6241: Better type checking for the arguments of io.StringIO.